# neutrino-schema

./: .gitignore  CHANGELOG.md  Cargo.toml  README.MD  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/saas-subscription/: README.md  neutrino-schema.toml  schema.sql
src/: lib.rs  main.rs
src/cli/: export.rs  generate.rs  init.rs  inspect.rs  mod.rs
src/codegen/: mod.rs  options.rs  output.rs  rust.rs  writer.rs
src/codegen/rust/: enums.rs  generator.rs  imports.rs  mod.rs  render.rs  resolver.rs
src/config/: generator.rs  mod.rs  project.rs
src/inference/: cardinality.rs  engine.rs  many_to_many.rs  mod.rs  naming.rs
src/introspect/: column.rs  helpers.rs  mod.rs  mysql.rs  mysql_enum.rs  postgres.rs  sqlite.rs  table.rs  traits.rs
src/ir/: constraint.rs  enum_def.rs  field.rs  index.rs  metadata.rs  mod.rs  relation.rs  schema.rs  table.rs
src/types/: db_type.rs  enum_ref.rs  mod.rs  mysql_type.rs  pg_type.rs  sqlite_type.rs  type_registry.rs
src/util/: naming.rs
src/validation/: mod.rs  tests.rs
src/validator/: mod.rs
tests/: cli_sqlite.rs  codegen_compile_test.rs  codegen_roundtrip_sqlite.rs  config.rs  cross_backend_mapping.rs  fixture_tests.rs  json_roundtrip.rs  migration_tests_mysql.rs  migration_tests_postgres.rs  migration_tests_sqlite.rs  mysql_integration.rs  postgres_codegen.rs  sqlite_integration.rs  type_mapping.rs  validator_roundtrip.rs
tests/common/: fixture.rs  migrations_common.rs  mod.rs
tests/fixtures/mysql/: schema.sql
tests/fixtures/postgres/: schema.sql
tests/fixtures/sqlite/: schema.sql
tests/migrations/mysql/: account_lockouts.sql  email_verification_tokens.sql  ip_rate_limits.sql  login_attempts.sql  network_restrictions.sql  network_restrictions_history.sql  oauth_access_tokens.sql  oauth_accounts.sql  oauth_authorization_codes.sql  oauth_client_grants.sql  oauth_client_redirect_uris.sql  oauth_clients.sql  oauth_device_codes.sql  oauth_providers.sql  oauth_refresh_tokens.sql  password_reset_tokens.sql  personal_access_tokens.sql  remember_me_tokens.sql  roles.sql  security_events.sql  session_table.sql  two_factor_codes.sql  user_allowed_ips.sql  user_roles.sql  user_security_settings.sql  user_sessions.sql  user_trusted_devices.sql  users.sql
tests/migrations/postgresql/: 0001_install_extensions.sql  0002_create_users.sql  0003_create_roles.sql  0004_create_user_roles.sql  0005_create_user_security_settings.sql  0006_create_user_trusted_devices.sql  0007_create_sessions.sql  0008_create_user_sessions.sql  0009_create_user_allowed_ips.sql  0010_create_oauth_clients.sql  0011_create_oauth_client_redirect_uris.sql  0012_create_oauth_client_grants.sql  0013_create_oauth_providers.sql  0014_create_oauth_accounts.sql  0015_create_oauth_access_tokens.sql  0016_create_oauth_refresh_tokens.sql  0017_create_oauth_authorization_codes.sql  0018_create_oauth_device_codes.sql  0019_create_personal_access_tokens.sql  0020_create_password_reset_tokens.sql  0021_create_email_verification_tokens.sql  0022_create_remember_me_tokens.sql  0023_create_security_events.sql  0024_create_login_attempts.sql  0025_create_account_lockouts.sql  0026_create_ip_rate_limits.sql  0027_create_network_restrictions.sql  0028_create_network_restrictions_history.sql  0029_create_two_factor_codes.sql
tests/migrations/sqlite/: account_lockouts.sql  email_verification_tokens.sql  ip_rate_limits.sql  login_attempts.sql  network_restrictions.sql  network_restrictions_history.sql  oauth_access_tokens.sql  oauth_accounts.sql  oauth_authorization_codes.sql  oauth_client_grants.sql  oauth_client_redirect_uris.sql  oauth_clients.sql  oauth_device_codes.sql  oauth_providers.sql  oauth_refresh_tokens.sql  password_reset_tokens.sql  personal_access_tokens.sql  remember_me_tokens.sql  roles.sql  security_events.sql  session_table.sql  two_factor_codes.sql  user_allowed_ips.sql  user_roles.sql  user_security_settings.sql  user_sessions.sql  user_trusted_devices.sql  users.sql
