[package]
name = "neutrino-schema"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/claimore22/neutrino-schema"
homepage = "https://github.com/claimore22/neutrino-schema"
rust-version = "1.85"
description = "Schema-to-Rust compiler pipeline for generating strongly typed Rust models"
keywords = ["database", "postgres", "schema", "codegen", "rust"]
categories = ["database", "development-tools"]
readme = "README.md"

[[bin]]
name = "neutrino-schema"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["postgres", "cli"]
postgres = ["dep:sqlx"]
cli = ["dep:clap", "dep:tokio"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", optional = true, features = ["derive", "env"] }
tokio = { version = "1", optional = true, default-features = false, features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.9", optional = true, default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs"] }

[lints.clippy]
all = "allow"
unwrap_used = "warn"
too_many_arguments = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
