[package]
name = "neutrino-schema"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/claimore22/neutrino-schema"
homepage = "https://github.com/claimore22/neutrino-schema"
rust-version = "1.85"
description = "Schema-to-Rust compiler pipeline for generating strongly typed Rust models"
keywords = ["database", "schema", "codegen", "rust", "sqlx"]
categories = ["database", "development-tools", "command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/neutrino-schema"

[[bin]]
name = "neutrino-schema"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["postgres", "sqlite", "mysql", "cli"]
postgres = ["sqlx/postgres", "sqlx/tls-rustls-aws-lc-rs"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql", "sqlx/tls-rustls-aws-lc-rs"]
cli = ["dep:clap", "dep:tokio", "dep:serde", "dep:toml"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", optional = true, features = ["derive", "env"] }
tokio = { version = "1", optional = true, default-features = false, features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.9", optional = true, default-features = false, features = ["runtime-tokio"] }
serde = { version = "1", optional = true, features = ["derive"] }
toml = { version = "0.8", optional = true }

[[test]]
name = "sqlite_integration"
path = "tests/sqlite_integration.rs"
required-features = ["sqlite"]

[[test]]
name = "mysql_integration"
path = "tests/mysql_integration.rs"
required-features = ["mysql"]

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

[lints.clippy]
all = "allow"
unwrap_used = "warn"
too_many_arguments = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
